Fixed spacing issue

--- a/admin/assets/css/ehf-admin.css
+++ b/admin/assets/css/ehf-admin.css
@@ -253,7 +253,7 @@ select.hfe-subscribe-field {
 }
 /* EHF Settings - About Us */
 .hfe-admin-about-section {
-    margin: -11px 17px 23px 0px;
+    margin: -12px 19px 23px 0px;
     padding: 30px;
     background: #fff;
     line-height: 2;
